--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="shortcut icon" href="https://joaoantoniosc.github.io/joaoantoniosc.github.io/imagens/favicon.png" type="image/x-png">
-<title>Informática Integrado Serra</title>
+<link rel="shortcut icon" href="https://informaticaintegrado.github.io/imagens/favicon.png" type="image/x-png">
+<title>Informática Integrado</title>
 <style>
 
 </style>
