--- a/paginas/materias.html
+++ b/paginas/materias.html
@@ -1,1 +1,170 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<link rel="shortcut icon" href="https://informaticaintegrado.github.io/imagens/favicon.png" type="image/x-png">
+<title>Informática Integrado</title>
+<style>
+@font-face {
+
+      font-family: "sketch block";
+      src: url("https://informaticaintegrado.github.io/Sketch_Block.ttf") format("truetype");
+
+      }
+
+div#page {
+    width: auto;
+    text-align: center;
+
+}
+img.menu {
+    max-width: 100%;
+	position: relative
+}
+body{
+margin: 0%;
+background-color: black;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background: transparent;
+     position: fixed;
+	 top: 0;
+    width: 100%;
+}
+
+li {
+    float: left;
+	border-right:1px solid #bbb;
+	font-family: sketch block;
+	font-size: 20px;
+
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: white;
+	opacity:0.65;
+	color: black;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+h2 { 
+   position: absolute; 
+   top: 600px; 
+   left: 0; 
+   width: 100%; 
+   text-decoration: none;
+   font: bold 50px sketch block;
+   padding: 10px;
+ 
+}
+
+h2 span { 
+   color: white; 
+   font: bold 45px sketch block; 
+   letter-spacing: 1px;  
+   text-decoration: none;
+   padding: 10px; 
+}
+p{
+text-decoration: none;
+ position: absolute;
+word-spacing: -1px;
+}
+a {
+color: white;
+text-decoration: none;
+letter-spacing: -3px;
+padding: 5px;
+}
+a:hover {
+background-color: white;
+opacity: 0.55;
+color: black;
+transition:all 0.1s linear;
+}
+div.block {
+    width: 200px;
+    height: 200px;
+    background: red;
+    -webkit-transition: width s, height 1s, -webkit-transform 2s; /* Safari */
+    transition: width 0.7s, height 0.7s, transform 0.7s;
+    margin: 2%;
+    float: left;
+	
+}
+
+div.block:hover {
+ -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+        transform: scale(1.2);
+}
+article {
+margin: 12%;
+}
+</style>
+</head>
+<body>
+<nav>
+
+<center>
+
+
+</center>
+
+</nav>
+<header>
+
+</header>
+
+<article>
+<a href=""><div class="block"><img src="https://informaticaintegrado.github.io/imagens/matematica.png" width='200' height='200'></div></a>
+<a href="https://informaticaintegrado.github.io/paginas/portugueseliteratura.html"><div class="block"><img src="https://informaticaintegrado.github.io/imagens/portugues.png" width='200' height='200'></div></a>
+<a href="https://informaticaintegrado.github.io/paginas/historia.html"><div class="block"><img src="https://informaticaintegrado.github.io/imagens/historia.png" width='200' height='200'></div></a>
+<a href=""><div class="block"><img src="https://informaticaintegrado.github.io/imagens/prog1.png" width='200' height='200'></div></a>
+<a href=""><div class="block"><img src="https://informaticaintegrado.github.io/imagens/historia.png" width='200' height='200'></div></a>
+<a href=""><div class="block"><img src="https://informaticaintegrado.github.io/imagens/historia.png" width='200' height='200'></div></a>
+</article>
+<footer>
+
+</footer>
+
+</body>
+</html>
 
