--- a/paginas/materias.html
+++ b/paginas/materias.html
@@ -25,6 +25,7 @@ body{
 margin: 0%;
 background-color: black;
 }
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -102,18 +103,24 @@ h2 span {
    text-decoration: none;
    padding: 10px; 
 }
+h1{
+font-family: sketch block;
+font-size: 100px;
+text-align: center;
+color: white;
+}
 p{
 text-decoration: none;
  position: absolute;
 word-spacing: -1px;
 }
-a {
+a.menu {
 color: white;
 text-decoration: none;
 letter-spacing: -3px;
 padding: 5px;
 }
-a:hover {
+a.menu:hover {
 background-color: white;
 opacity: 0.55;
 color: black;
@@ -122,7 +129,7 @@ transition:all 0.1s linear;
 div.block {
     width: 200px;
     height: 200px;
-    background: red;
+    background: white;
     -webkit-transition: width s, height 1s, -webkit-transform 2s; /* Safari */
     transition: width 0.7s, height 0.7s, transform 0.7s;
     margin: 2%;
@@ -138,9 +145,23 @@ div.block:hover {
 article {
 margin: 12%;
 }
+body.materias{
+margin: 0%;
+background: url("http://4.bp.blogspot.com/-vxWMBjUjE6c/VLAQyoleS5I/AAAAAAAAC_4/K8H4r2GgvJk/s1600/tma-chalkboard.jpg") no-repeat bottom center scroll;
+display: table;
+width: 100%;
+height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+div.center{
+text-align: center;
+}
 </style>
 </head>
-<body>
+<body class="materias">
 <nav>
 
 <center>
@@ -154,12 +175,18 @@ margin: 12%;
 </header>
 
 <article>
-<a href=""><div class="block"><img src="https://informaticaintegrado.github.io/imagens/matematica.png" width='200' height='200'></div></a>
-<a href="https://informaticaintegrado.github.io/paginas/portugueseliteratura.html"><div class="block"><img src="https://informaticaintegrado.github.io/imagens/portugues.png" width='200' height='200'></div></a>
+<center><img src="https://informaticaintegrado.github.io/imagens/materias.png"></center>
+</br>
+<div class="center">
+<a href="https://informaticaintegrado.github.io/paginas/matematica.html"><div class="block"><img src="https://informaticaintegrado.github.io/imagens/matematica.png" width='200' height='200'></div></a>
+<a class="block" href="https://informaticaintegrado.github.io/paginas/portugueseliteratura.html"><div class="block"><img src="https://informaticaintegrado.github.io/imagens/portugues.png" width='200' height='200'></div></a>
 <a href="https://informaticaintegrado.github.io/paginas/historia.html"><div class="block"><img src="https://informaticaintegrado.github.io/imagens/historia.png" width='200' height='200'></div></a>
-<a href=""><div class="block"><img src="https://informaticaintegrado.github.io/imagens/prog1.png" width='200' height='200'></div></a>
+<a href="https://informaticaintegrado.github.io/paginas/progamacao1.html"><div class="block"><img src="https://informaticaintegrado.github.io/imagens/prog1.png" width='200' height='200'></div></a>
+<a href="https://informaticaintegrado.github.io/paginas/geografia.html"><div class="block"><img src="https://informaticaintegrado.github.io/imagens/geografia.png" width='200' height='200'></div></a>
+<a href="https://informaticaintegrado.github.io/paginas/progweb.html"><div class="block"><img src="https://informaticaintegrado.github.io/imagens/progweb.png" width='200' height='200'></div></a>
 <a href=""><div class="block"><img src="https://informaticaintegrado.github.io/imagens/historia.png" width='200' height='200'></div></a>
 <a href=""><div class="block"><img src="https://informaticaintegrado.github.io/imagens/historia.png" width='200' height='200'></div></a>
+</div>
 </article>
 <footer>
 
@@ -167,4 +194,3 @@ margin: 12%;
 
 </body>
 </html>
-
