--- a/index.html
+++ b/index.html
@@ -5,18 +5,143 @@
 <link rel="shortcut icon" href="https://informaticaintegrado.github.io/imagens/favicon.png" type="image/x-png">
 <title>Informática Integrado</title>
 <style>
+@font-face {
+
+      font-family: "sketch block";
+      src: url("https://informaticaintegrado.github.io/Sketch_Block.ttf") format("truetype");
+
+      }
+
+div#page {
+    width: auto;
+    text-align: center;
+
+}
+img.menu {
+    max-width: 100%;
+	position: relative
+}
+body{
+margin: 0%;
+background-color: black;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background: transparent;
+     position: fixed;
+	 top: 0;
+    width: 100%;
+}
+
+li {
+    float: left;
+	border-right:1px solid #bbb;
+	font-family: sketch block;
+	font-size: 20px;
+
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: white;
+	opacity:0.65;
+	color: black;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+h2 { 
+   position: absolute; 
+   top: 600px; 
+   left: 0; 
+   width: 100%; 
+   text-decoration: none;
+   font: bold 50px sketch block;
+   padding: 10px;
+ 
+}
+
+h2 span { 
+   color: white; 
+   font: bold 45px sketch block; 
+   letter-spacing: 1px;  
+   text-decoration: none;
+   padding: 10px; 
+}
+p{
+text-decoration: none;
+ position: absolute;
+word-spacing: -1px;
+}
+a.menu {
+color: white;
+text-decoration: none;
+letter-spacing: -3px;
+padding: 5px;
+}
+a.menu:hover {
+background-color: white;
+opacity: 0.55;
+color: black;
+transition:all 0.1s linear;
+}
 
 </style>
 </head>
 <body>
-<header>
-
-</header>
 <nav>
 
+<center>
+
+
+</center>
+
 </nav>
+<header>
+<div id="page"> 
+<img class="menu"src="https://informaticaintegrado.github.io/fundo.JPG" alt="">
+  <p><h2><a class="menu" href="#home">A TURMA |</a>
+  <a class="menu" href="#news">O CURSO</a>
+  <a class="menu" href="https://informaticaintegrado.github.io/paginas/materias.html">| TRABALHOS</a></h2>
+
+</header>
+
 <article>
-oi
+
 </article>
 <footer>
 
